data/derived/sp14/progs/unify/prog2950.ml.out
Characters 147-148:
  List.fold_left f base l;;
                        ^
Error: This expression has type string but an expression was expected of type
         string list
